--- a/workspaces/vs2019/vcxproj/ServerCoalition.vcxitems.filters
+++ b/workspaces/vs2019/vcxproj/ServerCoalition.vcxitems.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\include\HelperFunctions.hpp">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)..\..\..\include\HTML.hpp">
+      <Filter>Header Files\Networking</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)..\..\..\source\CommandLineHandler.cpp">
